Refactor styles across multiple components for consistency and responsiveness; update navigation for mobile support, enhance chapter and section styles, and remove deprecated theme file.

--- a/src/lib/styles/_variables.scss
+++ b/src/lib/styles/_variables.scss
@@ -20,6 +20,15 @@ $brand-text-error: #d32f2f;
 $brand-bg-error: rgba($brand-text-error, 0.1);
 $brand-border-error: rgba($brand-text-error, 0.3);
 
+
+// ui colors
+$ui-color-primary: #e9f5ff;
+$ui-color-secondary: #4590cd;
+$ui-color-tertiary: #e9f5ff;
+$ui-color-quaternary: #e9f5ff;
+$ui-color-quinary: #e9f5ff;
+
+
 // Link Colors
 $brand-link-color: #1976D2;
 $brand-link-color-hover: #1565C0;
