--- a/src/lib/styles/_animations.scss
+++ b/src/lib/styles/_animations.scss
@@ -1,3 +1,5 @@
+@use 'variables' as *;
+
 // Animation utilities for VistaKine
 // These values are now defined in _variables.scss
 // $transition-fast: 150ms;
