--- a/src/lib/styles/_grid.scss
+++ b/src/lib/styles/_grid.scss
@@ -2,17 +2,11 @@
 // Based on: https://utopia.fyi/grid/calculator
 
 @use 'utopia-core-scss/src/utopia' as utopia;
+@use 'variables';
 
 // Breakpoints from typography
 $min-viewport: 300px;
 $max-viewport: 1240px;
-
-// Breakpoints for responsive design
-$breakpoint-sm: 640px;
-$breakpoint-md: 768px;
-$breakpoint-lg: 1024px;
-$breakpoint-xl: 1280px;
-$breakpoint-2xl: 1536px;
 
 // Base grid values
 $grid-min-columns: 4;   // Number of columns at min viewport
@@ -42,15 +36,15 @@ $grid-max-columns: 12;  // Number of columns at max viewport
   gap: var(--grid-gutter);
   grid-template-columns: repeat(4, 1fr);
 
-  @media (min-width: $breakpoint-sm) {
+  @media (min-width: variables.$breakpoint-sm) {
     grid-template-columns: repeat(6, 1fr);
   }
 
-  @media (min-width: $breakpoint-md) {
+  @media (min-width: variables.$breakpoint-md) {
     grid-template-columns: repeat(8, 1fr);
   }
 
-  @media (min-width: $breakpoint-lg) {
+  @media (min-width: variables.$breakpoint-lg) {
     grid-template-columns: repeat(12, 1fr);
   }
 }
@@ -63,7 +57,7 @@ $grid-max-columns: 12;  // Number of columns at max viewport
 }
 
 // Column span utility classes
-@media (min-width: $breakpoint-sm) {
+@media (min-width: variables.$breakpoint-sm) {
   @for $i from 1 through 12 {
     .col-span-#{$i} {
       grid-column: span $i;
